# translation-automation-tool

./: .dockerignore  .gitignore  Dockerfile  README.md  config.default.yaml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: index.html
transync/: __init__.py  cli.py  config.py  database.py  web.py
transync/models/: project.py
transync/providers/: base.py  deepl_provider.py  google_free_provider.py  google_provider.py  mock_provider.py  openai_provider.py
transync/services/: diff_engine.py  file_processor.py  git_service.py  json_processor.py  scheduler.py  strings_processor.py  sync_orchestrator.py  translation_service.py  xml_processor.py
transync/static/: index.html
